fix: css width overflow

--- a/src/components/Error.module.css
+++ b/src/components/Error.module.css
@@ -1,5 +1,4 @@
 .error {
-    width: 100%;
     min-height: 1.5rem;
     background: var(--color-error);
     color: var(--color-text-error);
